src/objects/Apttus_Config2__BillingPlanTemplate__c.object
<CustomObject>
    <description>Represents the template to create a billing plan</description>
    <fields>
        <fullName>Apttus_Config2__BillingMethod__c</fullName>
        <description>The billing method</description>
        <inlineHelpText>The billing method</inlineHelpText>
        <label>Billing Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Split Evenly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The plan description</description>
        <inlineHelpText>The plan description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NumOfInstallments__c</fullName>
        <description>The number of installments</description>
        <inlineHelpText>The number of installments</inlineHelpText>
        <label>Number of Installments</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PlanType__c</fullName>
        <description>The billing plan type</description>
        <inlineHelpText>The billing plan type</inlineHelpText>
        <label>Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                    <default>true</default>
                    <label>Fixed</label>
                </value>
                <value>
                    <fullName>Milestone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__StartType__c</fullName>
        <description>Select how the billing plan start date will be determined.</description>
        <inlineHelpText>Select how the billing plan start date will be determined.</inlineHelpText>
        <label>Start Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Quote Start Date</fullName>
                    <default>true</default>
                    <label>Quote Start Date</label>
                </value>
                <value>
                    <fullName>User Entered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Billing Plan Template</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Plan Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>